@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "May 2015" "sg3_utils\-1.41" SG3_UTILS
+.TH SG3_UTILS "8" "November 2015" "sg3_utils\-1.42" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
